examples/test/testpolicy17520.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17520
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key13: value31
      key31: value30
      key2: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value3
      podSelector:
        matchLabels:
          key32: value7
